--- a/main.css
+++ b/main.css
@@ -4,32 +4,18 @@
 }
 
 body {
-  margin: 0;
-  height: 100vh;
-  width: 100vw;
   font-family: DogicaPixelBold;
   text-transform: uppercase;
+  margin: 20px;
 }
 
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.top-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+header{
+  text-align: center;
 }
 
 .game-heading {
   margin: 0;
-  font-size: 100px;
+  font-size: 70px;
 }
 
 .game-heading-slide-in {
@@ -67,9 +53,9 @@ body {
   padding: 30px;
   margin: 30px;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
-  font-weight: bold;
+  font-size: 12px;
   color: whitesmoke;
   background-color: rgb(63, 61, 61);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -115,26 +101,28 @@ body {
   }
 }
 
-.game {
+main {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 50px;
-  font-size: 70px;
 }
 
 .player-container {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 20px;
+  border-radius: 3px;
   text-align: center;
   padding: 10px;
 }
 
-.green {
-  background-color: green;
+.current {
+  background-color: rgb(63, 61, 61);
+  color: rgb(255, 222, 183);
 }
 
 #playerX-container {
   animation: 2s playerXSlideIn 1 normal;
+  order: 1;
 }
 
 #playerO-container {
@@ -172,7 +160,7 @@ body {
   background-color: rgb(255, 255, 255);
   margin: 30px;
   animation: 2s gameBoardSlideIn 1 normal;
-  font-size: 100px;
+  font-size: 80px;
   gap: 10px;
   user-select: none;
 }
@@ -198,4 +186,75 @@ body {
 
 .square:hover {
   scale: 1.05;
+  background-color: rgb(248, 248, 248);
+}
+
+@media (max-width: 1270px) {
+  .game-heading{
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 1090px) {
+  .game-heading{
+    font-size: 40px;
+  }
+  main{
+    flex-direction: column;
+    gap:5px;
+  }
+  .new-game-button{
+    font-size: 10px;
+  }
+  #playerX-container {
+    order: 0;
+  }
+  .player-container{
+    display: flex;
+    font-size: 13px;
+  }
+  .game-board{
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 770px) {
+  .game-heading{
+    font-size: 30px;
+  }
+  .new-game-button{
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 580px){
+  .game-heading{
+    font-size: 20px;
+  }
+  .new-game-button{
+    margin: 10px;
+    padding: 20px;
+    font-size: 9px;
+    margin: 15px;
+  }
+  .player-container{
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 530px) {
+  .game-heading{
+    font-size: 15px;
+  }
+  .game-board{
+    width: 100%;
+    font-size: 70px;
+  }
+  .new-game-button{
+    margin: 5px;
+  }
+  .new-game-buttons{
+    margin: 20px;
+  }
 }
